--- a/client/src/App.css
+++ b/client/src/App.css
@@ -39,6 +39,23 @@ h1, h2 {
 h2 {
     font-size: 1.6rem;
 }
+button {
+    padding: 1rem;
+    border-radius: .5rem;
+    border: .1rem #a4a4a4 solid;
+    font-size: 1.6rem;
+    background-color: #f8f8f8;
+    cursor: pointer; 
+}
+.primary {
+    background-color: #f0c040;
+}
+button.block {
+    width: 100%;
+}
+button.block:hover {
+    border: 2px solid black;
+}
 /* Header */
 header a {
     color: #fff;
@@ -58,6 +75,15 @@ a.brand {
 .row.center {
     justify-content: center;
 }
+.row.top {
+    align-items: flex-start;
+}
+.col-1 {
+    flex: 1 1 25rem;
+}
+.col-2 {
+    flex: 2 1 50rem;
+}
 /* Image */
 
 img {
@@ -65,6 +91,9 @@ img {
 }
 img.medium {
     max-width: 29rem;
+    width: 100%;
+}
+img.large {
     width: 100%;
 }
 /* Card  */
@@ -90,4 +119,10 @@ img.medium {
 .rating span {
 color: #f0c040;
 margin: .1rem;
+}
+.success {
+    color: green;
+}
+.error {
+    color: red;
 }
